# AI-Safety-Lab

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  INTEGRATION_PLAN.md  README.md  VALIDATION_PLAN.md  WEIGHT_RATIONALE.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
.claude/: settings.local.json
app/: __init__.py  audit.py  cli.py  config.py  council.py  deliberation.py  main.py  orchestrator.py  safe_config.py  safe_schemas.py  schemas.py
app/analyzers/: __init__.py  policy_scope.py  redteam_surface.py  repo_summary.py  (+1 more)
examples/: evaluation_request.json  evaluation_request_local.json
frontend/: intake_views.py  result_views.py  streamlit_app.py  ui_styles.py
frontend_archived/: result_views.py  streamlit_app.py  ui_styles.py
model_assets/: __init__.py
scripts/: bootstrap_local_slm.sh  curl_eval.sh  diagnose_local_slm.py  run_benchmark_pack.py  run_local.sh  start_demo.sh
services/: gamma4_shim.py
tests/: conftest.py  test_api.py  test_arbitration_rules.py  test_audit.py  test_behavior_summary.py  test_benchmark_metrics.py  test_benchmark_pack.py  test_benchmark_repeated_runner.py  test_benchmark_reporting.py  test_benchmark_single_runner.py  test_benchmark_summary_renderer.py  test_bootstrap_script.py  test_council.py  test_deliberation.py  test_diagnose_local_slm.py  test_e_rules.py  test_evidence_anchors.py  test_frontend.py  test_multilingual.py  test_orchestrator.py  test_probe_packs.py  test_result_views.py  test_screening.py  test_slm_backend.py  test_team2_redteam.py  test_team3_risk.py
(+51 files in other folders)
