[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-safety-lab"
version = "0.3.0"
description = "UNICC integrated AI safety lab for grader-friendly repository evaluation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "streamlit>=1.40.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
packages = [
  "app",
  "app.analyzers",
  "app.experts",
  "app.integrations",
  "app.intake",
  "app.reporting",
  "app.slm",
  "app.targets",
  "services",
]
